// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarouselWithModalContainer> should have no accessibility violations 1`] = `
<div>
  <div
    class="Box-sc-1bsf784-0 sc-1k44dfv-0 jgFIyw"
    color="black"
  >
    <div
      class="Box-sc-1bsf784-0 Wrapper-n67dtg-0 gHnUTB"
      data-gtm-category="others"
      data-gtm-title="Carousel with Modal Container"
    >
      <div
        class="Box-sc-1bsf784-0 jGVkdm sc-1k44dfv-0 jVwGXt"
        display="flex"
        width="100%"
      >
        <div
          class="Box-sc-1bsf784-0 sc-1k44dfv-0 fWxNjR"
        >
          <div
            class="sc-1k44dfv-0 goPGQt sc-1k44dfv-0 dVTIrV"
            color="black"
          >
            

            <h3
              class="sc-1k44dfv-0 eUGlGC"
            >
              Honda Engine Technology
            </h3>
          </div>
          <div
            class="sc-1k44dfv-0 goPGQt sc-1k44dfv-0 bMeMBL"
            color="black"
          >
            

            <p>
              Honda engines offer a variety of advanced features for performance, durability, and the highest quality available. Excellent fuel efficiency. High power output. Quiet performance. Easy to use. What"s our secret? Exceptional engineering and technology. Honda engines are truly built like no other.
            </p>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kMytaf"
      >
        <div
          class="Box-sc-1bsf784-0 sc-1k44dfv-0 cVtBpL"
        >
          <div
            class="splide splide--slide splide--ltr splide--draggable is-active is-initialized"
            id="splide03"
          >
            <div
              class="splide__track"
              id="splide03-track"
              style="padding-left: 0px; padding-right: 0px;"
            >
              <ul
                class="splide__list"
                id="splide03-list"
                style="transform: translateX(0px);"
              >
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-active is-visible"
                  id="splide03-slide01"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="952ebf01-84e8-4c11-b273-c1557ee38822"
                      name="Card1"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            01 - Automatic mechanical de-compression system (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus enim eu enim cursus, sollicitudin sollicitudin nibh euismod. Praesent lobortis ipsum ligula. Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible is-next"
                  id="splide03-slide02"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a20"
                      name="Card2"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            02 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide03-slide03"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a24"
                      name="Card3"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            03 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide03-slide04"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a28"
                      name="Card4"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            04 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide03-slide05"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a21"
                      name="Card5"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            05 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="Box-sc-1bsf784-0 MYcIi"
            display="flex"
            height="48px"
            width="100%"
          >
            <div
              aria-label="Shared.Common.previousSlideAria"
              class="IconWrapper-lp9q2r-0 sc-bwzfXH gKiwsP"
              cursor="pointer"
              data-testid="arrow-left"
              display="flex"
              opacity="0.5"
              role="button"
              tabindex="0"
            />
            <div
              class="Box-sc-1bsf784-0 sc-1k44dfv-0 evNJbO"
            >
              <button
                aria-label="0"
                class="sc-1k44dfv-0 cjSExO"
                data-testid="step1"
                role="button"
              />
              <button
                aria-label="1"
                class="sc-1k44dfv-0 ipUiMI"
                data-testid="step2"
                role="button"
              />
            </div>
            <div
              aria-label="Shared.Common.nextSlideAria"
              class="IconWrapper-lp9q2r-0 sc-bwzfXH fugTUx"
              cursor="pointer"
              data-testid="arrow-right"
              display="flex"
              opacity="1"
              role="button"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CarouselWithModalContainer> should render correctly 1`] = `
<div>
  <div
    class="Box-sc-1bsf784-0 sc-1k44dfv-0 jgFIyw"
    color="black"
  >
    <div
      class="Box-sc-1bsf784-0 Wrapper-n67dtg-0 gHnUTB"
      data-gtm-category="others"
      data-gtm-title="Carousel with Modal Container"
    >
      <div
        class="Box-sc-1bsf784-0 jGVkdm sc-1k44dfv-0 jVwGXt"
        display="flex"
        width="100%"
      >
        <div
          class="Box-sc-1bsf784-0 sc-1k44dfv-0 fWxNjR"
        >
          <div
            class="sc-1k44dfv-0 goPGQt sc-1k44dfv-0 dVTIrV"
            color="black"
          >
            

            <h3
              class="sc-1k44dfv-0 eUGlGC"
            >
              Honda Engine Technology
            </h3>
          </div>
          <div
            class="sc-1k44dfv-0 goPGQt sc-1k44dfv-0 bMeMBL"
            color="black"
          >
            

            <p>
              Honda engines offer a variety of advanced features for performance, durability, and the highest quality available. Excellent fuel efficiency. High power output. Quiet performance. Easy to use. What"s our secret? Exceptional engineering and technology. Honda engines are truly built like no other.
            </p>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kMytaf"
      >
        <div
          class="Box-sc-1bsf784-0 sc-1k44dfv-0 cVtBpL"
        >
          <div
            class="splide splide--slide splide--ltr splide--draggable is-active is-initialized"
            id="splide01"
          >
            <div
              class="splide__track"
              id="splide01-track"
              style="padding-left: 0px; padding-right: 0px;"
            >
              <ul
                class="splide__list"
                id="splide01-list"
                style="transform: translateX(0px);"
              >
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-active is-visible"
                  id="splide01-slide01"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="952ebf01-84e8-4c11-b273-c1557ee38822"
                      name="Card1"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            01 - Automatic mechanical de-compression system (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus enim eu enim cursus, sollicitudin sollicitudin nibh euismod. Praesent lobortis ipsum ligula. Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible is-next"
                  id="splide01-slide02"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a20"
                      name="Card2"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            02 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide01-slide03"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a24"
                      name="Card3"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            03 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide01-slide04"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a28"
                      name="Card4"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            04 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide01-slide05"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a21"
                      name="Card5"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            05 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="Box-sc-1bsf784-0 MYcIi"
            display="flex"
            height="48px"
            width="100%"
          >
            <div
              aria-label="Shared.Common.previousSlideAria"
              class="IconWrapper-lp9q2r-0 sc-bwzfXH gKiwsP"
              cursor="pointer"
              data-testid="arrow-left"
              display="flex"
              opacity="0.5"
              role="button"
              tabindex="0"
            />
            <div
              class="Box-sc-1bsf784-0 sc-1k44dfv-0 evNJbO"
            >
              <button
                aria-label="0"
                class="sc-1k44dfv-0 cjSExO"
                data-testid="step1"
                role="button"
              />
              <button
                aria-label="1"
                class="sc-1k44dfv-0 ipUiMI"
                data-testid="step2"
                role="button"
              />
            </div>
            <div
              aria-label="Shared.Common.nextSlideAria"
              class="IconWrapper-lp9q2r-0 sc-bwzfXH fugTUx"
              cursor="pointer"
              data-testid="arrow-right"
              display="flex"
              opacity="1"
              role="button"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CarouselWithModalContainer> should render with no errors when params are present 1`] = `
<div>
  <div
    class="Box-sc-1bsf784-0 sc-1k44dfv-0 fyRpJs"
    color="black"
  >
    <div
      class="Box-sc-1bsf784-0 Wrapper-n67dtg-0 gHnUTB"
      data-gtm-category="others"
      data-gtm-title="Carousel with Modal Container"
    >
      <div
        class="Box-sc-1bsf784-0 jGVkdm sc-1k44dfv-0 jYWJXu"
        display="flex"
        width="100%"
      >
        <div
          class="Box-sc-1bsf784-0 sc-1k44dfv-0 fWxNjR"
        >
          <div
            class="sc-1k44dfv-0 goPGQt sc-1k44dfv-0 dVTIrV"
            color="black"
          >
            

            <h3
              class="sc-1k44dfv-0 eUGlGC"
            >
              Honda Engine Technology
            </h3>
          </div>
          <div
            class="sc-1k44dfv-0 goPGQt sc-1k44dfv-0 bMeMBL"
            color="black"
          >
            

            <p>
              Honda engines offer a variety of advanced features for performance, durability, and the highest quality available. Excellent fuel efficiency. High power output. Quiet performance. Easy to use. What"s our secret? Exceptional engineering and technology. Honda engines are truly built like no other.
            </p>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1bsf784-0 sc-1k44dfv-0 dWHtnt"
      >
        <div
          class="Box-sc-1bsf784-0 sc-1k44dfv-0 cVtBpL"
        >
          <div
            class="splide splide--slide splide--ltr splide--draggable is-active is-initialized"
            id="splide02"
          >
            <div
              class="splide__track"
              id="splide02-track"
              style="padding-left: 0px; padding-right: 0px;"
            >
              <ul
                class="splide__list"
                id="splide02-list"
                style="transform: translateX(0px);"
              >
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-active is-visible"
                  id="splide02-slide01"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="952ebf01-84e8-4c11-b273-c1557ee38822"
                      name="Card1"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            01 - Automatic mechanical de-compression system (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus enim eu enim cursus, sollicitudin sollicitudin nibh euismod. Praesent lobortis ipsum ligula. Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible is-next"
                  id="splide02-slide02"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a20"
                      name="Card2"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            02 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide02-slide03"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a24"
                      name="Card3"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            03 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide02-slide04"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a28"
                      name="Card4"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            04 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="splide__slide sc-1k44dfv-0 blDHlK is-visible"
                  id="splide02-slide05"
                  responsivecardsperpage="4"
                  style="margin-right: 24px;"
                  tabindex="0"
                >
                  <div
                    class="Box-sc-1bsf784-0 sc-1k44dfv-0 dLNGOD"
                    height="100%"
                  >
                    <div
                      class="Box-sc-1bsf784-0 sc-1k44dfv-0 hiduYi"
                      color="black"
                      data-gtm-category="Others"
                      id="e2aa6b5d-3a34-45e2-82be-1d9eb5867a21"
                      name="Card5"
                    >
                      <div
                        class="Box-sc-1bsf784-0 iPRsIc"
                      >
                        <img
                          alt="Image"
                          class="sc-1k44dfv-0 jLTFZk"
                          draggable="true"
                          loading="lazy"
                          src="./sample-mock-data/media/img/placeholders/placeholder-landscape.png"
                        />
                      </div>
                      <div
                        class="Box-sc-1bsf784-0 sc-1k44dfv-0 kJntAi"
                        color="black"
                      >
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 jkQLKZ"
                          color="inherit"
                        >
                          

                          <h6
                            class="sc-1k44dfv-0 eeeuqx"
                          >
                            05 - Variable Timing Digital CDI Ignition (Main title)
                          </h6>
                        </div>
                        <div
                          class="sc-1k44dfv-0 jcrtwT sc-1k44dfv-0 bSotsc"
                          color="inherit"
                        >
                          

                          <p>
                            Donec diam lectus, consectetur ac lectus eu, cursus consequat lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque est, tempus vitae suscipit ac, ornare id ex. Suspendisse nisl ipsum, convallis sed lorem sit amet, laoreet feugiat mauris.
                          </p>
                        </div>
                        <div
                          class="Box-sc-1bsf784-0 jKsJVt"
                        >
                          <button
                            class="Link-sc-16wd4a0-0 dIBUJD"
                            color="black !important"
                          >
                            Shared.Common.learnMoreLabel
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="Box-sc-1bsf784-0 dVZoqw"
            display="flex"
            height="48px"
            width="100%"
          >
            <div
              aria-label="Shared.Common.previousSlideAria"
              class="IconWrapper-lp9q2r-0 sc-bwzfXH cSMNlX"
              cursor="pointer"
              data-testid="arrow-left"
              display="flex"
              opacity="0.5"
              role="button"
              tabindex="0"
            />
            <div
              class="Box-sc-1bsf784-0 sc-1k44dfv-0 evNJbO"
            >
              <button
                aria-label="0"
                class="sc-1k44dfv-0 cjSExO"
                data-testid="step1"
                role="button"
              />
              <button
                aria-label="1"
                class="sc-1k44dfv-0 ipUiMI"
                data-testid="step2"
                role="button"
              />
            </div>
            <div
              aria-label="Shared.Common.nextSlideAria"
              class="IconWrapper-lp9q2r-0 sc-bwzfXH iBUaTS"
              cursor="pointer"
              data-testid="arrow-right"
              display="flex"
              opacity="1"
              role="button"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CarouselWithModalContainer> should return null if there is no fields 1`] = `<div />`;
